package protocol;

enum PBCompressType {
	NONE = 0;
	LZO = 1;
	LZ4 = 2;
}

message PBFileDesc {
    required string fullpath = 1;
	required int64 size = 2; 
	required string md5 = 3;
	required PBCompressType compresstype = 4;
	required int64 compressedsize = 5; 
	optional bytes buffer = 6;
	// to specified relative path in target 
	optional string targetrelativepath = 7;
	optional uint32 filemode = 8;
	optional bytes linktarget = 9;
	optional int64 modifytime = 10;
	optional int64 accesstime = 11;
	optional int64 createtime = 12;
}

message PBFileResult {
    required string fullpath = 1;
	required int32 retcode = 2;
	optional string targetrelativepath = 3;
}

message PBCommand {
    required string workdir = 1;
	required string exepath = 2;
	required string exename = 3;
	repeated string params = 4;
	repeated PBFileDesc inputfiles = 5;
	repeated string resultfiles = 6;
	repeated bytes env = 7;
}

message PBStatEntry {
	required string key = 1;
	required int64 time = 2;
}

message PBResult {
	required PBCommand cmd = 1;
	required int32 retcode = 2;
	required string outputmessage = 3;
	required string errormessage = 4;
	repeated PBFileDesc resultfiles = 5;
	repeated PBStatEntry stats = 6;
}

message PBCacheParam {
    required bytes name = 1;
    required bytes md5 = 2;
    optional int64 size = 3;
    required bytes target = 4;
    optional int32 overwrite = 5;
	optional uint32 filemode = 6;
	optional bytes linktarget = 7;
	optional int64 modifytime = 8;
	optional int64 accesstime = 9;
	optional int64 createtime = 10;
}

enum PBCacheStatus {
    NOFOUND = 0;
    SUCCESS = 1;
    ERRORWHILEFINDING = 2;
    ERRORWHILESAVING = 3;
}

message PBCacheResult {
    required PBCacheStatus status = 1;
    required bytes reason = 2;
}

enum PBCmdType {
    DISPATCHTASKREQ = 0;
    DISPATCHTASKRSP = 1;
	SYNCTIMEREQ = 2;
    SYNCTIMERSP = 3;
	SENDFILEREQ = 4;
    SENDFILERSP = 5;
    CHECKCACHEREQ = 6;
    CHECKCACHERSP = 7;
	UNKNOWN = 9999;
}

message PBHead {
	required string version = 1;
	required string magic = 2;
	required int32 bodylen = 3;
	required int64 buflen = 4;
	required PBCmdType cmdtype = 5;
	optional string business = 6;
	optional string taskid = 7;
}

message PBBodyDispatchTaskReq {
	repeated PBCommand cmds = 1;
}

message PBBodyDispatchTaskRsp {
	repeated PBResult results = 1;
}

message PBBodySyncTimeRsp {
	required int64 timenanosecond = 1;
}

message PBBodySendFileReq {
	repeated PBFileDesc inputfiles = 1;
}

message PBBodySendFileRsp {
	repeated PBFileResult results = 1;
}

message PBBodyCheckCacheReq {
    repeated PBCacheParam params = 1;
}

message PBBodyCheckCacheRsp {
    repeated PBCacheResult results = 1;
}